--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,10 +5,10 @@
 :root {
   --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
-  --global-text-color: #{$black-color};
-  --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$purple-color};
-  --global-hover-color: #{$purple-color};
+  --global-text-color: #2C3E50;
+  --global-text-color-light: #546E7A;
+  --global-theme-color: #0056b3;
+  --global-hover-color: #003d82;
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
