--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,7 @@ $max-content-width: {{ site.max_width }};
   "distill",
   "cv",
   "custom",
+  "phd-design",
   "font-awesome/fontawesome",
   "font-awesome/brands",
   "font-awesome/solid",
