--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -241,8 +241,15 @@ body {
 // Expand main content to use more lateral space
 .phd-portfolio {
   max-width: 1400px !important; // Wider container for bigger images
-  padding-left: clamp(1rem, 3vw, 3rem) !important;
-  padding-right: clamp(1rem, 3vw, 3rem) !important;
+  padding-left: clamp(1rem, 2vw, 2rem) !important; // Ridotto da 3vw/3rem
+  padding-right: clamp(1rem, 2vw, 2rem) !important; // Ridotto da 3vw/3rem
+}
+
+// Container generale più largo
+.container {
+  max-width: 1400px !important;
+  padding-left: clamp(1rem, 2vw, 2rem) !important;
+  padding-right: clamp(1rem, 2vw, 2rem) !important;
 }
 
 // Make Featured Events section even wider
